--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "build": "tsc -p tsconfig.json",
     "dev": "ts-node src/run.ts",
     "start": "node dist/run.js",
-    "sim": "ts-node src/run.ts --symbol BTC-USDT --tick 200 --dur 300000 --mm 2 --noise 6 --ta 2 --oracle --oracle-mode JDM --oracle-dt 100 --jdm-mu 0.00 --jdm-sigma 0.60 --jdm-lambda 0.20 --jdm-muJ -0.2 --jdm-sigmaJ 0.1 --port 3000"
+    "sim": "ts-node src/run.ts --config src/scenarios/demo.json"
   },
   "dependencies": {
     "commander": "^14.0.1",
