--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "dev": "ts-node src/run.ts",
     "start": "node dist/run.js",
     "sim": "ts-node src/run.ts --config src/scenarios/demo.json",
-    "scenario": "ts-node src/run.ts --config src/scenarios/demo.json"
+    "scenario": "ts-node src/run.ts --config src/scenarios/scenario-demo.json"
   },
   "dependencies": {
     "commander": "^14.0.1",
